--- a/app/src/main/res/drawable/circle_green.xml
+++ b/app/src/main/res/drawable/circle_green.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
        android:shape="oval">
-    <stroke android:color="@color/colorPrimary"
+    <stroke android:color="@color/green"
             android:width="10dp"/>
-    <solid android:color="@color/colorPrimaryDark"/>
+    <solid android:color="@color/greenDark"/>
     <corners android:radius="5dp"/>
     <size android:width="100dp"
           android:height="100dp"/>
