--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="15dp"
-        android:background="@drawable/circle_shaped_filled"
+        android:background="@drawable/circle_idle"
         android:text="@string/eta_default_text"
         android:textAllCaps="false"
         android:textColor="@color/white"
