--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#1565C0</color>
     <color name="colorPrimaryDark">#0D47A1</color>
-    <color name="colorAccent">#FDD835</color>
+    <color name="colorAccent">#E8B951</color>
     <color name="colorNeutral">#F0F0F0</color>
 
     <color name="white">#FFFFFF</color>
