--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,30 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
+
     <LinearLayout
-        android:layout_height="match_parent"
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tabLayout"
-            android:layout_height="wrap_content"
             android:layout_width="match_parent"
-            tools:background="@android:color/holo_blue_light"/>
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimaryDark"
+            app:tabIndicatorColor="@color/white"
+            app:tabSelectedTextColor="@color/white"
+            app:tabTextColor="@android:color/darker_gray"/>
 
         <android.support.v4.view.ViewPager
             android:id="@+id/viewpager"
-            android:layout_height="match_parent"
             android:layout_width="match_parent"
-            tools:background="@android:color/darker_gray"/>
+            android:layout_height="match_parent"
+            tools:background="@color/colorPrimary"/>
     </LinearLayout>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
-        android:layout_margin="@dimen/fab_margin"
-        android:layout_gravity="bottom|right"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:layout_margin="@dimen/fab_margin"/>
 </FrameLayout>
