--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,6 +30,7 @@
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:src="@drawable/add"
         android:layout_gravity="bottom|right"
         android:layout_margin="@dimen/fab_margin"/>
 </FrameLayout>
