--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -77,59 +77,59 @@
 
         </LinearLayout>
 
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+        <!--<LinearLayout-->
+            <!--android:orientation="horizontal"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content">-->
 
-            <TextView
-                android:text="@string/ticket_date_label"
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                style="@style/BoldTextLabel"/>
+            <!--<TextView-->
+                <!--android:text="@string/ticket_date_label"-->
+                <!--android:layout_weight="1"-->
+                <!--android:layout_width="0dp"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--style="@style/BoldTextLabel"/>-->
 
-            <TextView
-                android:text="5/1/2017"
-                android:layout_weight="2"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"/>
+            <!--<TextView-->
+                <!--android:text="5/1/2017"-->
+                <!--android:layout_weight="2"-->
+                <!--android:layout_width="0dp"-->
+                <!--android:layout_height="wrap_content"/>-->
 
-            <Button
-                android:text="Select date"
-                android:textSize="16sp"
-                android:layout_weight="2"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"/>
+            <!--<Button-->
+                <!--android:text="Select date"-->
+                <!--android:textSize="16sp"-->
+                <!--android:layout_weight="2"-->
+                <!--android:layout_width="0dp"-->
+                <!--android:layout_height="wrap_content"/>-->
 
-        </LinearLayout>
+        <!--</LinearLayout>-->
 
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+        <!--<LinearLayout-->
+            <!--android:orientation="horizontal"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content">-->
 
-            <TextView
-                android:text="@string/ticket_time_label"
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                style="@style/BoldTextLabel"/>
+            <!--<TextView-->
+                <!--android:text="@string/ticket_time_label"-->
+                <!--android:layout_weight="1"-->
+                <!--android:layout_width="0dp"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--style="@style/BoldTextLabel"/>-->
 
-            <TextView
-                android:text="12:00 PM"
-                android:layout_weight="2"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"/>
+            <!--<TextView-->
+                <!--android:text="12:00 PM"-->
+                <!--android:layout_weight="2"-->
+                <!--android:layout_width="0dp"-->
+                <!--android:layout_height="wrap_content"/>-->
 
-            <Button
-                android:text="Set time"
-                android:textSize="16sp"
-                android:layout_weight="2"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"/>
+            <!--<Button-->
+                <!--android:text="Set time"-->
+                <!--android:textSize="16sp"-->
+                <!--android:layout_weight="2"-->
+                <!--android:layout_width="0dp"-->
+                <!--android:layout_height="wrap_content"/>-->
 
-        </LinearLayout>
+        <!--</LinearLayout>-->
 
         <FrameLayout
             android:id="@+id/square"
